# pfinder

./: .gitignore  AGENTS.md  EXPLAIN.md  LICENSE  README.md  pyproject.toml  repo.txt
notebooks/: pii_scanner_analysis.ipynb
src/pii_scanner/: __init__.py  cli.py  example_cli.py  extractors.py  patterns.py  reports.py  scanner.py
tests/: test_patterns.py
