[project]
name = "pii-scanner-hackathon"
version = "0.1.0"
description = "CLI scanner for personal data detection in mixed corporate file stores"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "pyarrow>=16.1.0",
    "pypdf>=4.2.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.1",
    "striprtf>=0.0.26",
    "pillow>=10.4.0",
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.13",
    "ipykernel>=6.29.5",
]

[project.scripts]
pii-scan = "pii_scanner.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pii_scanner"]
